--- a/style.css
+++ b/style.css
@@ -54,17 +54,33 @@ button {
   transition-duration: 1s;
 }
 
-.background {
+.main-container {
   overflow: auto;
   max-height: 100vh;
-  background-image: url("img/background.png");
-  background-size: contain;
+}
+
+#background {
+  height: 100%;
+  /* cannot be 100% for protrait view */
+  width: max-content;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+#solar {
   background-repeat: no-repeat;
-  background-position: right;
-  background-color: rgb(27, 10, 52);
+  position: relative;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#rocket {
   position: fixed;
-  min-width: 100%;
-  min-height: 100%;
+  left: 58vw;
+  bottom: 0;
+  height: 40vh;
 }
 
 .info {
@@ -115,13 +131,6 @@ div.home-star-container:hover {
   height: 1.25em;
   font-size: 1.25em;
   opacity: 1;
-}
-
-#rocket {
-  position: fixed;
-  left: 58vw;
-  bottom: 0;
-  height: 40vh;
 }
 
 
