--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ button {
   position: fixed;
   right: 0;
   padding-right: 2%;
-  margin-top: 4%;
+  margin-top: 8vh;
   align-items: center;
   justify-content: right;
   display: none;
@@ -144,9 +144,9 @@ img[id^="cons"] {
 /* hard-coded 12 stars on the home page*/
 
 .zodiac-main-container {
-  width: 50%;
-  margin-top: 4%;
-  padding-left: 4%;
+  width: 50vw;
+  margin-top: 8vh;
+  padding-left: 4vw;
 }
 
 td {
