--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ button {
   position: fixed;
   right: 0;
   padding-right: 2%;
-  margin-top: 8vh;
+  top: 8vh;
   align-items: center;
   justify-content: right;
   display: none;
@@ -109,7 +109,6 @@ button {
 .home-star {
   margin-top: 4%;
   padding-left: 0;
-  margin-top: inherit;
   float: right;
   height: 1.2em;
   font-size: 1.2em;
@@ -139,14 +138,14 @@ div.home-star-container:hover {
 
 #solar {
   background-repeat: no-repeat;
-  position: relative;
-  max-width: 100%;
-  max-height: 100%;
+  position: fixed;
+  height: 100vh;
+  right: 0;
 }
 
 #rocket {
   position: fixed;
-  left: 58vw;
+  right: 11vw;
   bottom: 0;
   height: 40vh;
 }
