--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ div.home-star-container:hover {
 }
 
 .rocket-rotation {
-  animation: rocket-rotation 2.5s cubic-bezier(0.41, 0.33, 0.71, 0.64) forwards;
+  animation: rocket-rotation 900ms cubic-bezier(0.41, 0.33, 0.71, 0.64) forwards;
 }
 
 @keyframes rocket-rotation {
